# colorme-cmd

./: Cargo.toml  README.md
example/: cmd.yml
src/: command.rs  main.rs
