[package]
name = "colorme-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
dict = "0.1.5"
maplit = "1.0.2"
arrayvec = "0.7.2"
libc = "0.2"
serde = "1.0.152"
serde_yaml = "0.8.7"
serde_derive = "1.0.152"
regex = "1"